# Project2-backend

./: .gitignore  README.md  app.py  build-model.py  pyproject.toml  requirements.txt
api/: app.py  recommender.py
data/: final_data.csv  laptops.csv
notebooks/: Cleaning.ipynb  ConvertScores.ipynb  Cosine.ipynb  Recommendor_new.ipynb  recommender_with_pipeline.ipynb  recommendor.ipynb
recommender_system/: app.py  recommender.py  search.py
