[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["cse-vaibhav <jainvaibhav671@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.0"
numpy = "^1.24.2"
sklearn = "^0.0.post4"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
flask = "^2.2.3"
pymongo = "^4.3.3"
dnspython = "^2.3.0"


[tool.poetry.group.dev.dependencies]
joblib = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
